Create html tree.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>ul2tree</title>
 
+    <style type="text/css">
+        ul.expand{
+            display:block;
+        }
+        ul.collapse{
+            display:none;
+        }
+    </style>
+
     <!-- Step 1: include jQuery ul2tree plugin -->
     <script type="text/javascript" src="js/jquery-1.5.2.min.js"></script>
 
